crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__anon_named_tuple_alias.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
ModModule {
    node_index: NodeIndex(None),
    range: 0..26,
    body: [
        Assign(
            StmtAssign {
                node_index: NodeIndex(None),
                range: 0..25,
                decorator_list: [],
                targets: [
                    Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                ],
                value: Tuple(
                    ExprTuple {
                        node_index: NodeIndex(None),
                        range: 4..25,
                        elts: [
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 5..14,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..9,
                                            id: Name("name"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 11..14,
                                            id: Name("str"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 16..24,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 16..19,
                                            id: Name("age"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 21..24,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                        parenthesized: true,
                        is_anon_named_tuple: true,
                        is_anon_named_tuple_value: false,
                        callable_shape: None,
                        is_parameter_shape: false,
                    },
                ),
            },
        ),
    ],
}
