crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__anon_named_tuple_in_annotation.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
ModModule {
    node_index: NodeIndex(None),
    range: 0..25,
    body: [
        AnnAssign(
            StmtAnnAssign {
                node_index: NodeIndex(None),
                range: 0..24,
                decorator_list: [],
                target: Name(
                    ExprName {
                        node_index: NodeIndex(None),
                        range: 0..1,
                        id: Name("a"),
                        ctx: Store,
                    },
                ),
                annotation: Tuple(
                    ExprTuple {
                        node_index: NodeIndex(None),
                        range: 3..24,
                        elts: [
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 4..13,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 4..8,
                                            id: Name("name"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 10..13,
                                            id: Name("str"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 15..23,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 15..18,
                                            id: Name("age"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 20..23,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                        parenthesized: true,
                        is_anon_named_tuple: true,
                        is_anon_named_tuple_value: false,
                        callable_shape: None,
                        is_parameter_shape: false,
                    },
                ),
                value: None,
                simple: true,
                is_context: false,
            },
        ),
    ],
}
