crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__anon_named_tuple_value_construction.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
ModModule {
    node_index: NodeIndex(None),
    range: 0..26,
    body: [
        Assign(
            StmtAssign {
                node_index: NodeIndex(None),
                range: 0..25,
                decorator_list: [],
                targets: [
                    Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..1,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                ],
                value: Tuple(
                    ExprTuple {
                        node_index: NodeIndex(None),
                        range: 4..25,
                        elts: [
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 5..16,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..9,
                                            id: Name("name"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: StringLiteral(
                                        ExprStringLiteral {
                                            node_index: NodeIndex(None),
                                            range: 10..16,
                                            value: StringLiteralValue {
                                                inner: Single(
                                                    StringLiteral {
                                                        range: 10..16,
                                                        node_index: NodeIndex(None),
                                                        value: "asdf",
                                                        flags: StringLiteralFlags {
                                                            quote_style: Double,
                                                            prefix: Empty,
                                                            triple_quoted: false,
                                                            unclosed: false,
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ),
                            Named(
                                ExprNamed {
                                    node_index: NodeIndex(None),
                                    range: 18..24,
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 18..21,
                                            id: Name("age"),
                                            ctx: Invalid,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 22..24,
                                            value: Int(
                                                20,
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                        parenthesized: true,
                        is_anon_named_tuple: false,
                        is_anon_named_tuple_value: true,
                        callable_shape: None,
                        is_parameter_shape: false,
                    },
                ),
            },
        ),
    ],
}
